compiled/prod-sockshop/manifests/prod-sockshop-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: prod-sockshop
  name: prod-sockshop
