compiled/prod-sockshop/manifests/carts-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: carts
    app.kubernetes.io/part-of: sock-shop
    name: carts
  name: carts
  namespace: prod-sockshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: sock-shop
      name: carts
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: sock-shop
        name: carts
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
                -Djava.security.egd=file:/dev/urandom
            - name: ZIPKIN
              value: zipkin.jaeger.svc.cluster.local
          image: weaveworksdemos/carts:0.4.8
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: carts
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir:
            medium: Memory
          name: tmp-volume
