compiled/prod-sockshop/manifests/session-db-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    name: session-db
  name: session-db
  namespace: prod-sockshop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: session-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: session-db
    spec:
      containers:
        - image: redis:alpine
          imagePullPolicy: IfNotPresent
          name: session-db
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
              drop:
                - all
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
