compiled/prod-sockshop/manifests/user-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    name: user
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      name: user
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: user
    spec:
      affinity:
        podAntiAffinity: {}
      containers:
        - env:
            - name: mongo
              value: user-db:27017
          image: weaveworksdemos/user:0.4.7
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: user
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            runAsNonRoot: true
            runAsUser: 10001
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir:
            medium: Memory
          name: tmp-volume
