compiled/prod-sockshop/manifests/carts-db-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: carts-db
  name: carts-db
  namespace: prod-sockshop
spec:
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: mongo
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: carts-db
  sessionAffinity: None
  type: ClusterIP
