compiled/prod-sockshop/manifests/carts-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kapicorp.dev/component: carts
    app.kubernetes.io/part-of: sock-shop
    name: carts
  name: carts
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: carts
  sessionAffinity: None
  type: ClusterIP
