compiled/prod-sockshop/manifests/catalogue-db-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: catalogue-db
  name: catalogue-db
  namespace: prod-sockshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: sock-shop
      name: catalogue-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: sock-shop
        name: catalogue-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: socksdb
            - name: MYSQL_ROOT_PASSWORD
              value: 64MnOIqcXhO5yY5EETJsh6flWQYTmQ-mziB7MAgrMW8
          image: weaveworksdemos/catalogue-db:0.3.0
          imagePullPolicy: IfNotPresent
          name: catalogue-db
          ports:
            - containerPort: 3306
              name: mysql
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: catalogue-db
  name: catalogue-db
  namespace: prod-sockshop
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: catalogue-db
  sessionAffinity: None
  type: ClusterIP
