compiled/prod-sockshop/manifests/catalogue-db-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kapicorp.dev/component: catalogue-db
    app.kubernetes.io/part-of: sock-shop
    name: catalogue-db
  name: catalogue-db
  namespace: prod-sockshop
spec:
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: catalogue-db
  sessionAffinity: None
  type: ClusterIP
