compiled/prod-sockshop/manifests/catalogue-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: catalogue
  name: catalogue
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    name: catalogue
  sessionAffinity: None
  type: ClusterIP
