compiled/prod-sockshop/manifests/frontend-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: frontend
  name: frontend
  namespace: prod-sockshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: sock-shop
      name: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: sock-shop
        name: frontend
    spec:
      containers:
        - env:
            - name: SESSION_REDIS
              value: 'true'
          image: weaveworksdemos/front-end:0.3.12
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: frontend
          ports:
            - containerPort: 8079
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          securityContext:
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: frontend
  name: frontend
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: frontend
  sessionAffinity: None
  type: NodePort
