compiled/prod-sockshop/manifests/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: frontend
  name: frontend
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: frontend
  sessionAffinity: None
  type: NodePort
