compiled/prod-sockshop/manifests/orders-db-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: orders-db
  name: orders-db
  namespace: prod-sockshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: sock-shop
      name: orders-db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: sock-shop
        name: orders-db
    spec:
      containers:
        - image: mongo
          imagePullPolicy: IfNotPresent
          name: orders-db
          ports:
            - containerPort: 27017
              name: mongo
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
              drop:
                - all
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir:
            medium: Memory
          name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: orders-db
  name: orders-db
  namespace: gke-pvm-killer
spec:
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: mongo
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: orders-db
  sessionAffinity: None
  type: ClusterIP
