compiled/prod-sockshop/manifests/orders-db-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: orders-db
    app.kubernetes.io/part-of: sock-shop
    name: orders-db
  name: orders-db
  namespace: prod-sockshop
spec:
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: mongo
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: orders-db
  sessionAffinity: None
  type: ClusterIP
