compiled/prod-sockshop/manifests/orders-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: orders
    app.kubernetes.io/part-of: sock-shop
    name: orders
  name: orders
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  publishNotReadyAddresses:
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: orders
  sessionAffinity: None
  type: ClusterIP
