compiled/prod-sockshop/manifests/payment-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app: payment
    app.kubernetes.io/part-of: sock-shop
    name: payment
  name: payment
  namespace: prod-sockshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
      app.kubernetes.io/part-of: sock-shop
      name: payment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: payment
        app.kubernetes.io/part-of: sock-shop
        name: payment
    spec:
      containers:
        - image: weaveworksdemos/payment:0.4.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          name: payment
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment
    app.kubernetes.io/part-of: sock-shop
    name: payment
  name: payment
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: payment
    app.kubernetes.io/part-of: sock-shop
    name: payment
  sessionAffinity: None
  type: ClusterIP
