compiled/prod-sockshop/manifests/payment-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: payment
    app.kubernetes.io/part-of: sock-shop
    name: payment
  name: payment
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  publishNotReadyAddresses:
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: payment
  sessionAffinity: None
  type: ClusterIP
