compiled/prod-sockshop/manifests/queue-master-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: queue-master
  name: queue-master
  namespace: prod-sockshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: sock-shop
      name: queue-master
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: sock-shop
        name: queue-master
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
                -Djava.security.egd=file:/dev/urandom
            - name: ZIPKIN
              value: zipkin.jaeger.svc.cluster.local
          image: weaveworksdemos/queue-master:0.3.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: queue-master
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          securityContext:
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - emptyDir:
            medium: Memory
          name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: queue-master
  name: queue-master
  namespace: gke-pvm-killer
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: queue-master
  sessionAffinity: None
  type: ClusterIP
