compiled/prod-sockshop/manifests/rabbit-mq-bundle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: rabbit-mq
  name: rabbit-mq
  namespace: prod-sockshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/part-of: sock-shop
      name: rabbit-mq
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: sock-shop
        name: rabbit-mq
    spec:
      containers:
        - image: rabbitmq:3.6.8-management
          imagePullPolicy: IfNotPresent
          name: rabbit-mq
          ports:
            - containerPort: 15672
              name: management
              protocol: TCP
            - containerPort: 5672
              name: rabbitmq
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - CHOWN
                - SETGID
                - SETUID
                - DAC_OVERRIDE
              drop:
                - all
            readOnlyRootFilesystem: true
      hostNetwork: 'false'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: rabbit-mq
  name: rabbit-mq
  namespace: prod-sockshop
spec:
  ports:
    - name: management
      port: 15672
      protocol: TCP
      targetPort: management
    - name: rabbitmq
      port: 5672
      protocol: TCP
      targetPort: rabbitmq
  selector:
    app.kubernetes.io/part-of: sock-shop
    name: rabbit-mq
  sessionAffinity: None
  type: ClusterIP
