compiled/prod-sockshop/manifests/rabbit-mq-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: sock-shop
    name: rabbit-mq
  name: rabbit-mq
  namespace: prod-sockshop
spec:
  ports:
    - name: management
      port: 15672
      protocol: TCP
      targetPort: management
    - name: rabbitmq
      port: 5672
      protocol: TCP
      targetPort: rabbitmq
  selector:
    name: rabbit-mq
  sessionAffinity: None
  type: ClusterIP
