compiled/prod-sockshop/manifests/session-db-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kapicorp.dev/component: session-db
    name: session-db
  name: session-db
  namespace: prod-sockshop
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    name: session-db
  sessionAffinity: None
  type: ClusterIP
