compiled/prod-sockshop/manifests/shipping-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: shipping
    name: shipping
  name: shipping
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  publishNotReadyAddresses:
  selector:
    name: shipping
  sessionAffinity: None
  type: ClusterIP
