compiled/prod-sockshop/manifests/user-db-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: user-db
    name: user-db
  name: user-db
  namespace: prod-sockshop
spec:
  ports:
    - name: mongo
      port: 27017
      protocol: TCP
      targetPort: mongo
  publishNotReadyAddresses:
  selector:
    name: user-db
  sessionAffinity: None
  type: ClusterIP
