compiled/prod-sockshop/manifests/user-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    manifests.kapicorp.com/generated: 'true'
  labels:
    app.kapicorp.dev/component: user
    name: user
  name: user
  namespace: prod-sockshop
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    name: user
  sessionAffinity: None
  type: ClusterIP
