compiled/prod-sockshop/manifests/gke-managed-certificate-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sock-shop-managed
    networking.gke.io/managed-certificates: managed-sockshop.kapicorp.com
  labels:
    name: gke-managed-certificate
  name: gke-managed-certificate
  namespace:
spec:
  backend:
    service:
      name: frontend
      port: 80
  rules: []
