compiled/prod-sockshop/manifests/tls-certificate-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: sock-shop-tls
  labels:
    name: tls-certificate
  name: tls-certificate
spec:
  backend:
    service:
      name: frontend
      port: 80
  tls:
    - hosts:
        - sockshop.kapicorp.com
      secretName: sockshop.kapicorp.com
